Ensure vite installed

--- a/frontend/.svelte-kit/output/client/.vite/manifest.json
+++ b/frontend/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.C1kBXTGB.js",
+    "file": "_app/immutable/entry/app.DdbzpFks.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -33,7 +33,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.zzltOgaz.js",
+    "file": "_app/immutable/nodes/1.Cm7nVdMG.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -44,11 +44,11 @@
       "_IImCMv-Z.js",
       "_aYSWzEL-.js",
       "_CYy9pKZS.js",
-      "_C72-hYy4.js"
+      "_CRUUx_lR.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.DwLTjM4L.js",
+    "file": "_app/immutable/nodes/2.CEoX78I6.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -73,19 +73,19 @@
       "_IImCMv-Z.js"
     ]
   },
-  "_C72-hYy4.js": {
-    "file": "_app/immutable/chunks/C72-hYy4.js",
-    "name": "entry",
-    "imports": [
-      "_IImCMv-Z.js",
-      "_CK6mn_4X.js"
-    ]
-  },
   "_CK6mn_4X.js": {
     "file": "_app/immutable/chunks/CK6mn_4X.js",
     "name": "index-client",
     "imports": [
       "_IImCMv-Z.js"
+    ]
+  },
+  "_CRUUx_lR.js": {
+    "file": "_app/immutable/chunks/CRUUx_lR.js",
+    "name": "entry",
+    "imports": [
+      "_IImCMv-Z.js",
+      "_CK6mn_4X.js"
     ]
   },
   "_CUN6wchY.js": {
@@ -123,12 +123,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BvxYz-O1.js",
+    "file": "_app/immutable/entry/start.DUl3OQRm.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_C72-hYy4.js"
+      "_CRUUx_lR.js"
     ]
   }
 }
