--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "ollama": "^0.5.14",
     "open": "^10.1.0",
+    "openai": "^6.25.0",
     "rss-parser": "^3.13.0",
     "socket.io": "^4.8.1",
     "system-commands": "^1.1.7",
