--- a/frontend/.svelte-kit/output/client/.vite/manifest.json
+++ b/frontend/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DdbzpFks.js",
+    "file": "_app/immutable/entry/app.CZ5Vix_v.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -33,7 +33,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.Cm7nVdMG.js",
+    "file": "_app/immutable/nodes/1.BFNG7_xA.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -44,11 +44,11 @@
       "_IImCMv-Z.js",
       "_aYSWzEL-.js",
       "_CYy9pKZS.js",
-      "_CRUUx_lR.js"
+      "_CcZzyyAr.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.CEoX78I6.js",
+    "file": "_app/immutable/nodes/2.DkEf5F6I.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -80,14 +80,6 @@
       "_IImCMv-Z.js"
     ]
   },
-  "_CRUUx_lR.js": {
-    "file": "_app/immutable/chunks/CRUUx_lR.js",
-    "name": "entry",
-    "imports": [
-      "_IImCMv-Z.js",
-      "_CK6mn_4X.js"
-    ]
-  },
   "_CUN6wchY.js": {
     "file": "_app/immutable/chunks/CUN6wchY.js",
     "name": "disclose-version",
@@ -100,6 +92,14 @@
     "name": "lifecycle",
     "imports": [
       "_IImCMv-Z.js"
+    ]
+  },
+  "_CcZzyyAr.js": {
+    "file": "_app/immutable/chunks/CcZzyyAr.js",
+    "name": "entry",
+    "imports": [
+      "_IImCMv-Z.js",
+      "_CK6mn_4X.js"
     ]
   },
   "_DCSeNEyV.js": {
@@ -123,12 +123,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.DUl3OQRm.js",
+    "file": "_app/immutable/entry/start.Demd_vpo.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CRUUx_lR.js"
+      "_CcZzyyAr.js"
     ]
   }
 }
